--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -35,7 +35,7 @@
         </div>
       {{/if}}
 
-      <form action="api/movies" method="POST">
+      <form action="/api/movies" method="POST">
         <label for="Title">Title:</label>
         <input type="text" name="Title" id="Title" required />
 
